# RaySnake

./: .gitignore  CMakeLists.txt  Makefile  README.md  aa.sh  build_web.sh  custom_shell.html  food.h  game.cpp  game.h  globals.cpp  globals.h  init.sh  main.cpp  snake.cpp  snake.h
src/: food.cpp  food.h  game.cpp  game.h  globals.cpp  globals.h  main.cpp  screen_utils.h  snake.cpp  snake.h
